--- a/index.css
+++ b/index.css
@@ -77,3 +77,8 @@
     font-size: 100%; /* Размер шрифта в процентах */ 
     color: white;
 }
+
+@media (max-width: 767px) { ... }
+@media (min-width: 768px) and (max-width: 991px) { ... }
+@media (min-width: 991px) and (max-width: 1199px) { ... }
+@media (min-width: 1200px) { ... }
