--- a/index.css
+++ b/index.css
@@ -78,7 +78,19 @@
     color: white;
 }
 
-@media (max-width: 767px) { ... }
-@media (min-width: 768px) and (max-width: 991px) { ... }
-@media (min-width: 991px) and (max-width: 1199px) { ... }
-@media (min-width: 1200px) { ... }
+/*
+  ... стандартные правила CSS ...
+  например, выводим карточки товаров по 4 в ряд
+*/
+@media (max-width:768px) {
+  /*
+    ... правила для планшетов ...
+    выводим карточки товаров по 2 в ряд
+  */
+}
+@media (max-width:320px) {
+  /*
+    ... правила для смартфонов ...
+    выводим карточки товаров по 1 в ряд
+  */
+}
