--- a/Главная.css
+++ b/Главная.css
@@ -10,14 +10,14 @@
 .u-section-1 .u-text-1 {
   font-weight: 300;
   font-size: 4.5rem;
-  margin: 600px 580px 0 0;
+  margin: 560px 580px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
   border-style: none;
   font-size: 1.875rem;
   font-weight: 700;
-  margin: -57px 62px 60px auto;
+  margin: -57px 0 60px auto;
   padding: 0;
 }
 
@@ -27,51 +27,48 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 732px;
+    min-height: 818px;
   }
 
   .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 543px;
     margin-right: 380px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: 0;
+    margin-top: 0;
   }
 }
 
 @media (max-width: 991px) {
    .u-section-1 {
-    background-position: 88.6% 50%;
+    background-position: 45.05% 50%;
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 561px;
+    min-height: 888px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 1826px;
+    margin-top: 576px;
     margin-right: 160px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: -1213px;
+    margin-top: -7px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 421px;
-  }
-
   .u-section-1 .u-text-1 {
     font-size: 3.75rem;
-    margin-top: 1972px;
+    margin-top: 639px;
     margin-right: 0;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: -1333px;
+    margin-top: 0;
   }
 }
 
@@ -80,16 +77,13 @@
     background-position: 48.25% 50%;
   }
 
-  .u-section-1 .u-sheet-1 {
-    min-height: 888px;
-  }
-
   .u-section-1 .u-text-1 {
-    margin-top: 2021px;
+    font-size: 3rem;
+    margin-top: 19px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: -1492px;
+    margin-top: 600px;
     margin-right: auto;
   }
 } .u-section-2 {
@@ -159,18 +153,26 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 229px;
   }
 
   .u-section-2 .u-container-layout-1 {
     padding-top: 30px;
     padding-bottom: 30px;
   }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: 5px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
     min-height: 320px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
   }
 } .u-section-3 {
   background-image: url("images/2.jpg");
