--- a/nicepage.css
+++ b/nicepage.css
@@ -37884,25 +37884,31 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 245px;
+  min-height: 267px;
 }
 
 .u-header .u-icon-1 {
   width: 144px;
   height: 148px;
-  margin: 58px auto 0 19px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 48px auto 0 19px;
   padding: 0;
 }
 
-.u-header .u-text-1 {
-  font-size: 3rem;
+.u-header .u-btn-1 {
   background-image: none;
-  font-weight: 700;
-  margin: -112px 376px 0 211px;
+  border-style: none;
+  font-size: 1.5rem;
+  margin: -117px auto 0 340px;
+  padding: 0;
 }
 
 .u-header .u-menu-1 {
-  margin: -56px 0 60px auto;
+  margin: -16px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -37913,93 +37919,103 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
+
+.u-header .u-text-1 {
+  font-size: 3rem;
+  background-image: none;
+  font-weight: 700;
+  margin: -20px 376px 60px 211px;
+}
 @media (max-width: 1199px) {
   .u-header .u-sheet-1 {
-    min-height: 230px;
+    min-height: 264px;
   }
 
   .u-header .u-icon-1 {
     width: 144px;
     height: 147px;
-    margin-left: 19px;
+    margin-top: 67px;
+    margin-left: 0;
   }
 
-  .u-header .u-text-1 {
-    width: auto;
-    margin-top: -152px;
-    margin-right: 324px;
-    margin-left: 221px;
+  .u-header .u-btn-1 {
+    margin-left: 286px;
   }
 
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -126px;
+    margin-top: -53px;
+  }
+
+  .u-header .u-text-1 {
+    width: auto;
+    margin: 17px 218px 51px 170px;
   }
 }
 @media (max-width: 991px) {
   .u-header .u-sheet-1 {
-    min-height: 187px;
+    min-height: 243px;
   }
 
   .u-header .u-icon-1 {
-    margin-top: 25px;
+    margin-top: 55px;
+    margin-left: 30px;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: -118px;
+    margin-left: auto;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: -12px;
   }
 
   .u-header .u-text-1 {
     font-size: 2.25rem;
-    margin-top: -102px;
-    margin-right: 123px;
-    margin-left: 191px;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: 1px;
-    margin-bottom: 28px;
+    margin: 1px 143px 41px 194px;
   }
 }
 @media (max-width: 767px) {
   .u-header .u-sheet-1 {
-    min-height: 167px;
+    min-height: 255px;
   }
 
-  .u-header .u-icon-1 {
-    margin-top: 15px;
-    margin-left: 0;
-  }
-
-  .u-header .u-text-1 {
-    width: 224px;
-    margin-top: -114px;
-    margin-left: auto;
-    margin-right: auto;
+  .u-header .u-btn-1 {
+    margin-top: -127px;
+    margin-right: 108px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -94px;
-    margin-bottom: 42px;
+    margin-top: -20px;
+  }
+
+  .u-header .u-text-1 {
+    font-size: 2.125rem;
+    margin: 20px 22px 42px 155px;
   }
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 255px;
+    min-height: 273px;
   }
 
   .u-header .u-icon-1 {
-    width: 120px;
-    height: 123px;
-    margin-top: 20px;
+    margin-top: 18px;
   }
 
-  .u-header .u-text-1 {
-    width: auto;
-    margin-top: -11px;
-    margin-right: 107px;
-    margin-left: 0;
+  .u-header .u-btn-1 {
+    margin-top: 22px;
+    margin-right: 0;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -135px;
-    margin-bottom: -62px;
+    margin-top: 131px;
+  }
+
+  .u-header .u-text-1 {
+    font-size: 1.8125rem;
+    margin: -153px 0 60px 158px;
   }
 }
  .u-footer {
