--- a/Главная.css
+++ b/Главная.css
@@ -7,11 +7,24 @@
   min-height: 888px;
 }
 
+.u-section-1 .u-text-1 {
+  font-weight: 300;
+  font-size: 4.5rem;
+  --animation-custom_in-translate_x: -300px;
+  --animation-custom_in-translate_y: 0px;
+  margin: 562px 580px 0 0;
+}
+
 .u-section-1 .u-btn-1 {
   border-style: none;
   font-size: 1.875rem;
   font-weight: 700;
-  margin: 661px 62px 0 auto;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: -59px 62px 60px auto;
   padding: 0;
 }
 
@@ -19,23 +32,17 @@
   font-size: 1.2em;
 }
 
-.u-section-1 .u-text-1 {
-  font-weight: 300;
-  font-size: 4.5rem;
-  margin: -158px 580px 60px 0;
-}
-
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
     min-height: 732px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-right: 0;
-  }
-
   .u-section-1 .u-text-1 {
     margin-right: 380px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-right: 0;
   }
 }
 
@@ -61,7 +68,6 @@
   .u-section-1 .u-text-1 {
     font-size: 3.75rem;
     --animation-custom_in-translate_x: -200px;
-    --animation-custom_in-translate_y: 0px;
     --animation-custom_in-opacity: 0;
     --animation-custom_in-rotate: 0deg;
     --animation-custom_in-scale: 1;
@@ -81,7 +87,12 @@
   .u-section-1 .u-text-1 {
     font-size: 3rem;
     width: auto;
-    margin-top: -196px;
+    margin-top: 522px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 35px;
+    margin-bottom: 6px;
   }
 } .u-section-2 {
   background-image: url("images/9417586f34f8306d65d71c5516acce0fbb719bf6c22a831990151d2f137a2972ea55b01276b30d4e8ad599b48b0ecfe11eb55a81b88d51071daaf3_1280.jpg");
@@ -89,109 +100,287 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 574px;
 }
 
-.u-section-2 .u-layout-wrap-1 {
-  margin: 0 auto 20px 0;
+.u-section-2 .u-list-1 {
+  grid-template-rows: auto;
+  margin-top: 50px;
+  margin-bottom: 0;
 }
 
-.u-section-2 .u-layout-cell-1 {
-  min-height: 380px;
+.u-section-2 .u-repeater-1 {
+  grid-template-columns: 25% 25% 25% 25%;
+  min-height: 574px;
+  grid-gap: 0px 0px;
+  grid-auto-columns: 25%;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 21px 0;
+  padding: 20px 30px;
 }
 
-.u-section-2 .u-icon-1 {
-  height: 96px;
-  width: 96px;
-  background-image: linear-gradient(#478ac9, #db545a);
-  margin: 61px auto 0 63px;
-  padding: 0;
+.u-section-2 .u-image-1 {
+  height: 213px;
+  margin: 75px auto 0 0;
 }
 
 .u-section-2 .u-text-1 {
-  text-shadow: 0 -2px 8px rgba(128,128,128,1);
-  margin: 45px 923px 0 5px;
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: underline !important;
+  text-transform: uppercase;
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-2 {
+  height: 213px;
+  margin: 75px auto 0 0;
+}
+
+.u-section-2 .u-text-3 {
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-text-4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: underline !important;
+  text-transform: uppercase;
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-3 {
+  height: 213px;
+  margin: 75px auto 0 0;
+}
+
+.u-section-2 .u-text-5 {
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-text-6 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: underline !important;
+  text-transform: uppercase;
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-4 {
+  height: 213px;
+  margin: 75px auto 0 0;
+}
+
+.u-section-2 .u-text-7 {
+  margin: 20px 16px 0;
+}
+
+.u-section-2 .u-text-8 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: underline !important;
+  text-transform: uppercase;
+  margin: 20px 16px 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 333px;
+    min-height: 552px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(4, 25%);
+    min-height: 473px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 166px;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 313px;
+  .u-section-2 .u-text-1 {
+    margin-right: 21px;
+    margin-left: 21px;
   }
 
-  .u-section-2 .u-text-1 {
+  .u-section-2 .u-text-2 {
     margin-left: 0;
-    margin-right: 727px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 166px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 21px;
+    margin-left: 21px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 166px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-right: 21px;
+    margin-left: 21px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 166px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-right: 21px;
+    margin-left: 21px;
+  }
+
+  .u-section-2 .u-text-8 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 220px;
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 1449px;
+    grid-auto-columns: 50%;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 229px;
+  .u-section-2 .u-image-1 {
+    height: 285px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-2 .u-icon-1 {
-    margin-top: 5px;
+  .u-section-2 .u-image-2 {
+    height: 285px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-2 .u-text-1 {
-    margin-right: 507px;
+  .u-section-2 .u-image-3 {
+    height: 285px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 285px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 320px;
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: 100%;
+    grid-auto-columns: 100%;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 272px;
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-2 .u-icon-1 {
-    --animation-custom_in-translate_x: -200px;
-    --animation-custom_in-translate_y: 0px;
-    --animation-custom_in-opacity: 0;
-    --animation-custom_in-rotate: 0deg;
-    --animation-custom_in-scale: 1;
-    margin-top: 14px;
-    margin-left: 61px;
+  .u-section-2 .u-image-1 {
+    height: 494px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-2 .u-text-1 {
-    --animation-custom_in-translate_x: -200px;
-    --animation-custom_in-translate_y: 0px;
-    --animation-custom_in-opacity: 0;
-    --animation-custom_in-rotate: 0deg;
-    --animation-custom_in-scale: 1;
-    margin-top: 36px;
-    margin-right: 327px;
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 494px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 494px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 494px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 100px;
+  .u-section-2 .u-image-1 {
+    height: 304px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-2 .u-text-1 {
-    margin-right: 127px;
+  .u-section-2 .u-image-2 {
+    height: 304px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 304px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 304px;
+    margin-right: initial;
+    margin-left: initial;
   }
 } .u-section-3 {
   background-image: url("images/2.jpg");
@@ -262,6 +451,10 @@
     min-height: 250px;
   }
 
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 525px;
+  }
+
   .u-section-3 .u-container-layout-1 {
     padding-left: 0;
     padding-right: 0;
@@ -269,6 +462,8 @@
 
   .u-section-3 .u-text-1 {
     font-size: 3.75rem;
+    width: auto;
+    margin-right: 0;
   }
 }
 
@@ -283,8 +478,6 @@
 
   .u-section-3 .u-text-1 {
     font-size: 3rem;
-    width: auto;
     margin-top: 140px;
-    margin-right: 0;
   }
 }
