--- a/Главная.css
+++ b/Главная.css
@@ -24,7 +24,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: -59px 62px 60px auto;
+  margin: -59px 61px 60px auto;
   padding: 0;
 }
 
@@ -52,17 +52,22 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 561px;
+    min-height: 778px;
   }
 
   .u-section-1 .u-text-1 {
     margin-right: 160px;
   }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -291px;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 421px;
+    min-height: 584px;
   }
 
   .u-section-1 .u-text-1 {
@@ -91,16 +96,15 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 35px;
-    margin-bottom: 6px;
+    margin-top: -292px;
   }
 } .u-section-2 {
-  background-image: url("images/9417586f34f8306d65d71c5516acce0fbb719bf6c22a831990151d2f137a2972ea55b01276b30d4e8ad599b48b0ecfe11eb55a81b88d51071daaf3_1280.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/9417586f34f8306d65d71c5516acce0fbb719bf6c22a831990151d2f137a2972ea55b01276b30d4e8ad599b48b0ecfe11eb55a81b88d51071daaf3_1280.jpg");
   background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 574px;
+  min-height: 624px;
 }
 
 .u-section-2 .u-list-1 {
@@ -113,7 +117,6 @@
   grid-template-columns: 25% 25% 25% 25%;
   min-height: 574px;
   grid-gap: 0px 0px;
-  grid-auto-columns: 25%;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -122,19 +125,45 @@
 
 .u-section-2 .u-image-1 {
   height: 213px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 75px auto 0 0;
 }
 
 .u-section-2 .u-text-1 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1.5rem;
   font-weight: 700;
-  text-decoration: underline !important;
   text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
+}
+
+.u-section-2 .u-btn-1 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 5px auto 0;
+  padding: 0;
+}
+
+.u-section-2 .u-icon-2 {
+  font-size: 1.2em;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -143,19 +172,45 @@
 
 .u-section-2 .u-image-2 {
   height: 213px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 75px auto 0 0;
 }
 
 .u-section-2 .u-text-3 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
 }
 
 .u-section-2 .u-text-4 {
   font-size: 1.5rem;
   font-weight: 700;
-  text-decoration: underline !important;
   text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
+}
+
+.u-section-2 .u-btn-2 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 5px auto 0;
+  padding: 0;
+}
+
+.u-section-2 .u-icon-4 {
+  font-size: 1.2em;
 }
 
 .u-section-2 .u-container-layout-3 {
@@ -164,19 +219,45 @@
 
 .u-section-2 .u-image-3 {
   height: 213px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 75px auto 0 0;
 }
 
 .u-section-2 .u-text-5 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
 }
 
 .u-section-2 .u-text-6 {
   font-size: 1.5rem;
   font-weight: 700;
-  text-decoration: underline !important;
   text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
+}
+
+.u-section-2 .u-btn-3 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 5px auto 0;
+  padding: 0;
+}
+
+.u-section-2 .u-icon-6 {
+  font-size: 1.2em;
 }
 
 .u-section-2 .u-container-layout-4 {
@@ -185,19 +266,45 @@
 
 .u-section-2 .u-image-4 {
   height: 213px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 75px auto 0 0;
 }
 
 .u-section-2 .u-text-7 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
 }
 
 .u-section-2 .u-text-8 {
   font-size: 1.5rem;
   font-weight: 700;
-  text-decoration: underline !important;
   text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 20px 16px 0;
+}
+
+.u-section-2 .u-btn-4 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 5px auto 0;
+  padding: 0;
+}
+
+.u-section-2 .u-icon-8 {
+  font-size: 1.2em;
 }
 
 @media (max-width: 1199px) {
@@ -206,7 +313,6 @@
   }
 
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(4, 25%);
     min-height: 473px;
   }
 
@@ -277,9 +383,8 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: 50% 50%;
     min-height: 1449px;
-    grid-auto-columns: 50%;
   }
 
   .u-section-2 .u-image-1 {
@@ -310,7 +415,6 @@
 @media (max-width: 767px) {
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 100%;
-    grid-auto-columns: 100%;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -359,31 +463,71 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-container-layout-1 {
+    padding-top: 19px;
+    padding-bottom: 19px;
+  }
+
   .u-section-2 .u-image-1 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-2 .u-btn-1 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-top: 19px;
+    padding-bottom: 19px;
   }
 
   .u-section-2 .u-image-2 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-2 .u-btn-2 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-top: 19px;
+    padding-bottom: 19px;
   }
 
   .u-section-2 .u-image-3 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
   }
 
+  .u-section-2 .u-btn-3 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-top: 19px;
+    padding-bottom: 19px;
+  }
+
   .u-section-2 .u-image-4 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
   }
+
+  .u-section-2 .u-btn-4 {
+    font-size: 1.875rem;
+  }
 } .u-section-3 {
-  background-image: url("images/2.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.45), rgba(0,0,0,0.45)), url("images/2.jpg");
   background-position: 50% 50%;
 }
 
@@ -392,15 +536,16 @@
 }
 
 .u-section-3 .u-layout-wrap-1 {
-  margin: 50px auto 0 0;
+  margin-top: 50px;
+  margin-bottom: 0;
 }
 
 .u-section-3 .u-layout-cell-1 {
-  min-height: 533px;
+  min-height: 718px;
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 30px 0;
+  padding: 0;
 }
 
 .u-section-3 .u-text-1 {
@@ -409,29 +554,293 @@
   --animation-custom_in-translate_x: -200px;
   --animation-custom_in-scale: 1;
   font-weight: 700;
-  margin: 249px auto 0 0;
+  margin: 0;
+}
+
+.u-section-3 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-repeater-1 {
+  grid-template-columns: 25% 25% 25% 25%;
+  min-height: 574px;
+  grid-gap: 0px 0px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-1 {
+  height: 213px;
+  margin-top: 75px;
+  margin-bottom: 0;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-3 .u-text-2 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-weight: bold;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-btn-1 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 21px auto 0;
+  padding: 0;
+}
+
+.u-section-3 .u-icon-2 {
+  font-size: 1.2em;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-2 {
+  height: 213px;
+  margin-top: 75px;
+  margin-bottom: 0;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-3 .u-text-4 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-weight: bold;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-text-5 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  text-decoration: underline !important;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-btn-2 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 21px auto 0;
+  padding: 0;
+}
+
+.u-section-3 .u-icon-4 {
+  font-size: 1.2em;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-3 {
+  height: 213px;
+  margin-top: 75px;
+  margin-bottom: 0;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-3 .u-text-6 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-weight: bold;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-text-7 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-btn-3 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 21px auto 0;
+  padding: 0;
+}
+
+.u-section-3 .u-icon-6 {
+  font-size: 1.2em;
+}
+
+.u-section-3 .u-container-layout-5 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-4 {
+  height: 213px;
+  margin-top: 75px;
+  margin-bottom: 0;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-3 .u-text-8 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-weight: bold;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-text-9 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: underline !important;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 12px 16px 0;
+}
+
+.u-section-3 .u-btn-4 {
+  border-style: none;
+  font-size: 1.125rem;
+  margin: 21px auto 0;
+  padding: 0;
+}
+
+.u-section-3 .u-icon-8 {
+  font-size: 1.2em;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 489px;
+    min-height: 369px;
   }
 
-  .u-section-3 .u-layout-wrap-1 {
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 592px;
+  }
+
+  .u-section-3 .u-list-1 {
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 439px;
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: repeat(4, 25%);
+    min-height: 473px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 174px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 174px;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 174px;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-7 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 174px;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-9 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 150px;
-  }
-
   .u-section-3 .u-layout-cell-1 {
     min-height: 100px;
   }
@@ -444,17 +853,30 @@
   .u-section-3 .u-text-1 {
     font-size: 2.25rem;
   }
+
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 1449px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 131px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 131px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 131px;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 131px;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 250px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 525px;
-  }
-
   .u-section-3 .u-container-layout-1 {
     padding-left: 0;
     padding-right: 0;
@@ -463,7 +885,46 @@
   .u-section-3 .u-text-1 {
     font-size: 3.75rem;
     width: auto;
-    margin-right: 0;
+  }
+
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 103px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 103px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 103px;
+  }
+
+  .u-section-3 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 103px;
   }
 }
 
@@ -472,12 +933,44 @@
     background-position: 50.38% 50%;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 382px;
-  }
-
   .u-section-3 .u-text-1 {
     font-size: 3rem;
     margin-top: 140px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 334px;
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-top: 88px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 334px;
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-top: 88px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 334px;
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-top: 88px;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 334px;
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-top: 88px;
   }
 }
