--- a/nicepage.css
+++ b/nicepage.css
@@ -1673,6 +1673,9 @@ a {
 .u-label-left label + textarea {
   flex-grow: 1;
 }
+.u-label-left .u-agree-label {
+  width: auto;
+}
 .u-form-submit.u-label-left label {
   pointer-events: none;
 }
@@ -11451,6 +11454,9 @@ section.u-image:not(.u-hover-box),
 .u-sticky {
   transition: background-color 250ms, box-shadow 250ms;
 }
+.u-header.u-box-shadow {
+  z-index: 1;
+}
 .u-overlap .u-header {
   position: absolute;
   top: 0;
@@ -16957,7 +16963,7 @@ img.u-opacity-0,
 }
 .u-language .u-icon {
   display: inline-flex;
-  height: 24px !important;
+  width: auto !important;
   vertical-align: middle;
 }
 .u-language .u-language-url,
@@ -20274,6 +20280,36 @@ section.u-dialog-block:not(.u-dialog-open) {
   right: 0;
   left: 0;
   z-index: 3;
+}
+.u-box-shadow.u-section-row:nth-child(10) {
+  z-index: 1;
+}
+.u-box-shadow.u-section-row:nth-child(9) {
+  z-index: 2;
+}
+.u-box-shadow.u-section-row:nth-child(8) {
+  z-index: 3;
+}
+.u-box-shadow.u-section-row:nth-child(7) {
+  z-index: 4;
+}
+.u-box-shadow.u-section-row:nth-child(6) {
+  z-index: 5;
+}
+.u-box-shadow.u-section-row:nth-child(5) {
+  z-index: 6;
+}
+.u-box-shadow.u-section-row:nth-child(4) {
+  z-index: 7;
+}
+.u-box-shadow.u-section-row:nth-child(3) {
+  z-index: 8;
+}
+.u-box-shadow.u-section-row:nth-child(2) {
+  z-index: 9;
+}
+.u-box-shadow.u-section-row:nth-child(1) {
+  z-index: 10;
 }
 .u-hover-box {
   overflow: hidden;
@@ -37922,7 +37958,7 @@ a.u-link.u-text-hover-grey-90:hover {
   background-image: none;
   border-style: none;
   font-size: 1.5rem;
-  margin: -136px auto 0;
+  margin: -136px auto 0 436px;
   padding: 0;
 }
 
@@ -37944,8 +37980,7 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 3rem;
   background-image: none;
   font-weight: 700;
-  width: 553px;
-  margin: -29px auto 48px;
+  margin: -27px 283px 47px 304px;
 }
 @media (max-width: 1199px) {
   .u-header .u-icon-1 {
@@ -37956,12 +37991,13 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-btn-1 {
-    margin-top: -128px;
+    margin-top: -127px;
+    margin-left: auto;
   }
 
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: 14px;
+    margin-top: 13px;
   }
 
   .u-header .u-text-1 {
@@ -37975,12 +38011,11 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-btn-1 {
-    margin-top: -118px;
-    margin-right: 220px;
+    margin-top: -105px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -29px;
+    margin-top: -42px;
   }
 
   .u-header .u-text-1 {
