--- a/nicepage.css
+++ b/nicepage.css
@@ -37633,11 +37633,17 @@ a.u-link.u-text-hover-grey-90:hover {
         
         
         
+        
         --theme-sheet-width-xl: 1140px;
         --theme-sheet-width-lg: 940px;
         --theme-sheet-width-md: 720px;
         --theme-sheet-width-sm: 540px;
         --theme-sheet-width-xs: 340px;
+        
+        
+        
+        
+        
         
         
         
@@ -37730,6 +37736,7 @@ a.u-link.u-text-hover-grey-90:hover {
         {
         margin-top: 20px;
         margin-bottom: 20px;
+        font-family: Lobster,display;
         }
         .u-btn
         {
@@ -37802,6 +37809,16 @@ a.u-link.u-text-hover-grey-90:hover {
         h3
         {
         font-size: 1.5rem;
+        }
+        }
+        @media (max-width: 1199px) {
+        p:not(.u-text-variant)
+        {
+        font-weight: 700;
+        line-height: 1.6;
+        color: #2cccc4;
+        list-icon-spacing: 0.3;
+        list-icon-size: 0.8;
         }
         }
         /*end-media rules*/
@@ -37958,12 +37975,19 @@ a.u-link.u-text-hover-grey-90:hover {
   background-image: none;
   border-style: none;
   font-size: 1.5rem;
-  margin: -136px auto 0 436px;
+  margin: -157px auto 0 431px;
   padding: 0;
 }
 
+.u-header .u-text-1 {
+  font-size: 3rem;
+  background-image: none;
+  font-weight: 700;
+  margin: 41px 283px 0 304px;
+}
+
 .u-header .u-menu-1 {
-  margin: -4px 0 0 auto;
+  margin: -100px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -37976,98 +38000,120 @@ a.u-link.u-text-hover-grey-90:hover {
   margin: 20px auto 0;
 }
 
-.u-header .u-text-1 {
-  font-size: 3rem;
+.u-header .u-btn-2 {
   background-image: none;
-  font-weight: 700;
-  margin: -27px 283px 47px 304px;
+  border-style: none;
+  font-size: 1.5rem;
+  margin: -68px auto 60px 437px;
+  padding: 0;
 }
 @media (max-width: 1199px) {
   .u-header .u-icon-1 {
     width: 144px;
     height: 147px;
-    margin-top: 48px;
-    margin-left: 30px;
+    margin-left: 84px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -127px;
-    margin-left: auto;
-  }
-
-  .u-header .u-menu-1 {
-    width: auto;
-    margin-top: 13px;
+    margin-top: -140px;
+    margin-left: 336px;
   }
 
   .u-header .u-text-1 {
     width: auto;
-    margin: -36px 165px 30px 222px;
-  }
-}
-@media (max-width: 991px) {
-  .u-header .u-icon-1 {
-    margin-top: 55px;
-  }
-
-  .u-header .u-btn-1 {
-    margin-top: -105px;
+    margin-top: 31px;
+    margin-right: 139px;
+    margin-left: 248px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -42px;
+    margin-top: -105px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -47px;
+    margin-left: 336px;
+  }
+}
+@media (max-width: 991px) {
+  .u-header .u-btn-1 {
+    margin-top: -124px;
+    margin-right: 202px;
+    margin-left: auto;
   }
 
   .u-header .u-text-1 {
     font-size: 2.25rem;
-    margin: 8px 143px 31px 194px;
+    margin-top: 32px;
+    margin-right: -71px;
+    margin-left: 238px;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: -122px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -18px;
+    margin-right: 202px;
+    margin-left: auto;
   }
 }
 @media (max-width: 767px) {
-  .u-header .u-sheet-1 {
-    min-height: 258px;
-  }
-
   .u-header .u-icon-1 {
-    margin-top: 56px;
+    margin-top: 28px;
     margin-left: 0;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -114px;
-    margin-right: 122px;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: -52px;
+    margin-top: -99px;
+    margin-right: 113px;
   }
 
   .u-header .u-text-1 {
     font-size: 2.125rem;
-    margin: 20px 20px 56px 157px;
-  }
-}
-@media (max-width: 575px) {
-  .u-header .u-sheet-1 {
-    min-height: 316px;
-  }
-
-  .u-header .u-icon-1 {
-    margin-top: 32px;
-  }
-
-  .u-header .u-btn-1 {
-    margin-top: 40px;
-    margin-right: auto;
+    margin-top: 49px;
+    margin-right: -136px;
+    margin-left: 136px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -228px;
+    margin-top: -143px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -3px;
+    margin-right: 113px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-icon-1 {
+    margin-top: 15px;
+  }
+
+  .u-header .u-btn-1 {
+    font-size: 1rem;
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: 0;
   }
 
   .u-header .u-text-1 {
     font-size: 1.8125rem;
-    margin: 3px 0 60px 158px;
+    margin-top: -3px;
+    margin-right: 0;
+    margin-left: 17px;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: -223px;
+  }
+
+  .u-header .u-btn-2 {
+    font-size: 1rem;
+    margin-top: 103px;
+    margin-right: 21px;
+    margin-bottom: 55px;
   }
 }
  .u-footer {
