--- a/Главная.css
+++ b/Главная.css
@@ -184,12 +184,27 @@
     font-size: 3.75rem;
   }
 
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 27px;
+  }
+
   .u-section-1 .u-text-4 {
     font-size: 3.75rem;
   }
 
+  .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 27px;
+  }
+
   .u-section-1 .u-text-7 {
     font-size: 3.75rem;
+  }
+
+  .u-section-1 .u-text-9 {
+    width: auto;
+    margin-top: 27px;
   }
 } .u-section-2 {
   background-image: linear-gradient(#478ac9, #db545a);
@@ -574,12 +589,14 @@
 
   .u-section-2 .u-image-1 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-2 .u-btn-1 {
     font-size: 1.875rem;
+    margin-top: 7px;
   }
 
   .u-section-2 .u-container-layout-2 {
@@ -589,6 +606,7 @@
 
   .u-section-2 .u-image-2 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
   }
@@ -599,6 +617,7 @@
 
   .u-section-2 .u-btn-2 {
     font-size: 1.875rem;
+    margin-top: 7px;
   }
 
   .u-section-2 .u-container-layout-3 {
@@ -608,6 +627,7 @@
 
   .u-section-2 .u-image-3 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
   }
@@ -618,6 +638,7 @@
 
   .u-section-2 .u-btn-3 {
     font-size: 1.875rem;
+    margin-top: 7px;
   }
 
   .u-section-2 .u-container-layout-4 {
@@ -627,6 +648,7 @@
 
   .u-section-2 .u-image-4 {
     height: 304px;
+    margin-top: 0;
     margin-right: initial;
     margin-left: initial;
   }
@@ -637,6 +659,7 @@
 
   .u-section-2 .u-btn-4 {
     font-size: 1.875rem;
+    margin-top: 7px;
   }
 } .u-section-3 {
   background-image: linear-gradient(#478ac9, #db545a);
@@ -875,15 +898,6 @@
   font-size: 1.2em;
 }
 
-.u-section-3 .u-text-9 {
-  line-height: 1.2;
-  font-size: 3.75rem;
-  --animation-custom_in-translate_x: -200px;
-  --animation-custom_in-scale: 1;
-  font-weight: 700;
-  margin: -719px auto 0 25px;
-}
-
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
     min-height: 648px;
@@ -1025,7 +1039,7 @@
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 987px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -1033,99 +1047,147 @@
     padding-right: 10px;
   }
 
+  .u-section-3 .u-list-1 {
+    margin-bottom: -633px;
+  }
+
   .u-section-3 .u-repeater-1 {
     grid-template-columns: repeat(2, 50%);
     min-height: 1465px;
   }
 
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 28px;
+    padding-right: 28px;
+  }
+
   .u-section-3 .u-image-1 {
     height: 243px;
+    width: 292px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-3 .u-text-1 {
-    margin-top: 49px;
+    margin-top: 27px;
     margin-right: 0;
+    margin-left: 3px;
   }
 
   .u-section-3 .u-text-2 {
-    margin-top: 49px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 56px;
+    margin-right: 52px;
+    margin-left: 78px;
   }
 
   .u-section-3 .u-btn-1 {
     font-size: 1.5rem;
-    margin-top: 48px;
+    margin-top: 52px;
+    margin-right: 70px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 28px;
+    padding-right: 28px;
   }
 
   .u-section-3 .u-image-2 {
     height: 243px;
+    width: 292px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-3 .u-text-3 {
-    margin-top: 49px;
+    margin-top: 27px;
     margin-right: 0;
+    margin-left: 3px;
   }
 
   .u-section-3 .u-text-4 {
-    margin-top: 49px;
-    margin-left: 0;
-    margin-right: auto;
+    margin-top: 56px;
+    margin-right: 52px;
+    margin-left: 78px;
   }
 
   .u-section-3 .u-btn-2 {
     font-size: 1.5rem;
-    margin-top: 48px;
+    margin-top: 52px;
+    margin-right: 70px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 28px;
+    padding-right: 28px;
   }
 
   .u-section-3 .u-image-3 {
     height: 243px;
+    width: 292px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-3 .u-text-5 {
-    margin-top: 49px;
+    margin-top: 27px;
     margin-right: 0;
+    margin-left: 3px;
   }
 
   .u-section-3 .u-text-6 {
-    margin-top: 49px;
-    margin-left: 0;
-    margin-right: auto;
+    margin-top: 56px;
+    margin-right: 52px;
+    margin-left: 78px;
   }
 
   .u-section-3 .u-btn-3 {
     font-size: 1.5rem;
-    margin-top: 48px;
+    margin-top: 52px;
+    margin-right: 70px;
+  }
+
+  .u-section-3 .u-container-layout-5 {
+    padding-left: 28px;
+    padding-right: 28px;
   }
 
   .u-section-3 .u-image-4 {
     height: 243px;
+    width: 292px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-3 .u-text-7 {
-    margin-top: 49px;
+    margin-top: 27px;
     margin-right: 0;
+    margin-left: 3px;
   }
 
   .u-section-3 .u-text-8 {
-    margin-top: 49px;
-    margin-left: 0;
-    margin-right: auto;
+    margin-top: 56px;
+    margin-right: 52px;
+    margin-left: 78px;
   }
 
   .u-section-3 .u-btn-4 {
     font-size: 1.5rem;
-    margin-top: 48px;
-  }
-
-  .u-section-3 .u-text-9 {
-    font-size: 2.25rem;
+    margin-top: 52px;
+    margin-right: 70px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 2065px;
+    min-height: 2506px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-bottom: 60px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 1576px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -1133,96 +1195,122 @@
     padding-right: 0;
   }
 
+  .u-section-3 .u-list-1 {
+    margin-top: 37px;
+    margin-bottom: -545px;
+  }
+
   .u-section-3 .u-repeater-1 {
     grid-template-columns: 100%;
+    min-height: 2084px;
   }
 
   .u-section-3 .u-container-layout-2 {
-    padding: 0 10px;
+    padding: 0;
   }
 
   .u-section-3 .u-image-1 {
-    height: 266px;
-    margin-top: -131px;
+    height: 315px;
+    width: 520px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-top: 1px;
+    margin-top: 10px;
+    margin-left: 11px;
+    margin-right: 11px;
   }
 
   .u-section-3 .u-text-2 {
-    margin-top: -29px;
+    width: 165px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-btn-1 {
-    margin-top: 25px;
+    margin-top: 7px;
+    margin-right: 0;
   }
 
   .u-section-3 .u-container-layout-3 {
-    padding: 0 10px;
+    padding: 0;
   }
 
   .u-section-3 .u-image-2 {
-    height: 266px;
-    margin-top: -131px;
+    height: 315px;
+    width: 520px;
   }
 
   .u-section-3 .u-text-3 {
-    margin-top: 1px;
+    margin-top: 10px;
+    margin-left: 11px;
+    margin-right: 11px;
   }
 
   .u-section-3 .u-text-4 {
-    margin-top: -29px;
+    width: 165px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-btn-2 {
-    margin-top: 25px;
+    margin-top: 7px;
+    margin-right: 0;
   }
 
   .u-section-3 .u-container-layout-4 {
-    padding: 0 10px;
+    padding: 0;
   }
 
   .u-section-3 .u-image-3 {
-    height: 266px;
-    margin-top: -131px;
+    height: 315px;
+    width: 520px;
   }
 
   .u-section-3 .u-text-5 {
-    margin-top: 1px;
+    margin-top: 10px;
+    margin-left: 11px;
+    margin-right: 11px;
   }
 
   .u-section-3 .u-text-6 {
-    margin-top: -29px;
+    width: 165px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-btn-3 {
-    margin-top: 25px;
+    margin-top: 7px;
+    margin-right: 0;
   }
 
   .u-section-3 .u-container-layout-5 {
-    padding: 0 10px;
+    padding: 0;
   }
 
   .u-section-3 .u-image-4 {
-    height: 266px;
-    margin-top: -131px;
+    height: 315px;
+    width: 520px;
   }
 
   .u-section-3 .u-text-7 {
-    margin-top: 1px;
+    margin-top: 10px;
+    margin-left: 11px;
+    margin-right: 11px;
   }
 
   .u-section-3 .u-text-8 {
-    margin-top: -29px;
+    width: 165px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-btn-4 {
-    margin-top: 25px;
-  }
-
-  .u-section-3 .u-text-9 {
-    font-size: 3.75rem;
+    margin-top: 7px;
+    margin-right: 0;
   }
 }
 
@@ -1235,14 +1323,13 @@
     min-height: 2208px;
   }
 
-  .u-section-3 .u-container-layout-2 {
-    padding-left: 0;
-    padding-right: 0;
+  .u-section-3 .u-list-1 {
+    margin-bottom: 0;
   }
 
   .u-section-3 .u-image-1 {
-    height: 164px;
-    margin-top: 0;
+    height: 206px;
+    width: 340px;
   }
 
   .u-section-3 .u-text-1 {
@@ -1252,25 +1339,20 @@
   }
 
   .u-section-3 .u-text-2 {
-    width: 165px;
+    width: auto;
     margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-3 .u-btn-1 {
     font-size: 1.875rem;
-    margin-top: 0;
-  }
-
-  .u-section-3 .u-container-layout-3 {
-    padding-left: 0;
-    padding-right: 0;
+    margin-top: 9px;
+    margin-right: auto;
+    margin-left: 73px;
   }
 
   .u-section-3 .u-image-2 {
-    height: 164px;
-    margin-top: 0;
+    height: 206px;
+    width: 340px;
   }
 
   .u-section-3 .u-text-3 {
@@ -1280,24 +1362,20 @@
   }
 
   .u-section-3 .u-text-4 {
-    width: 165px;
+    width: auto;
     margin-top: 10px;
-    margin-left: auto;
   }
 
   .u-section-3 .u-btn-2 {
     font-size: 1.875rem;
-    margin-top: 0;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 0;
-    padding-right: 0;
+    margin-top: 9px;
+    margin-right: auto;
+    margin-left: 73px;
   }
 
   .u-section-3 .u-image-3 {
-    height: 164px;
-    margin-top: 0;
+    height: 206px;
+    width: 340px;
   }
 
   .u-section-3 .u-text-5 {
@@ -1307,24 +1385,20 @@
   }
 
   .u-section-3 .u-text-6 {
-    width: 165px;
+    width: auto;
     margin-top: 10px;
-    margin-left: auto;
   }
 
   .u-section-3 .u-btn-3 {
     font-size: 1.875rem;
-    margin-top: 0;
-  }
-
-  .u-section-3 .u-container-layout-5 {
-    padding-left: 0;
-    padding-right: 0;
+    margin-top: 9px;
+    margin-right: auto;
+    margin-left: 73px;
   }
 
   .u-section-3 .u-image-4 {
-    height: 164px;
-    margin-top: 0;
+    height: 206px;
+    width: 340px;
   }
 
   .u-section-3 .u-text-7 {
@@ -1334,21 +1408,14 @@
   }
 
   .u-section-3 .u-text-8 {
-    width: 165px;
+    width: auto;
     margin-top: 10px;
-    margin-left: auto;
   }
 
   .u-section-3 .u-btn-4 {
     font-size: 1.875rem;
-    margin-top: 0;
-  }
-
-  .u-section-3 .u-text-9 {
-    font-size: 3rem;
-    width: auto;
-    margin-top: 31px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 9px;
+    margin-right: auto;
+    margin-left: 73px;
   }
 }
