--- a/nicepage.css
+++ b/nicepage.css
@@ -38093,27 +38093,27 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-header .u-btn-1 {
     font-size: 1rem;
-    margin-top: 0;
+    margin-top: 15px;
     margin-right: auto;
     margin-left: 0;
   }
 
   .u-header .u-text-1 {
     font-size: 1.8125rem;
-    margin-top: -3px;
+    margin-top: 3px;
     margin-right: 0;
     margin-left: 17px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -223px;
+    margin-top: -244px;
   }
 
   .u-header .u-btn-2 {
     font-size: 1rem;
-    margin-top: 103px;
-    margin-right: 21px;
-    margin-bottom: 55px;
+    margin-top: 118px;
+    margin-right: 0;
+    margin-bottom: 40px;
   }
 }
  .u-footer {
